# ReportAgent

./: .coveragerc  .dockerignore  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  supervisor.py
agents/edges/: __init__.py  conditional_edges.py  error_edges.py
agents/nodes/: __init__.py  data_analyst.py  data_collector.py  data_processor.py  editor.py  human_review.py  intent_classifier.py  publisher.py  research_planner.py  reviewer.py  writer.py
agents/state/: __init__.py  migrator.py
agents/state/schemas/: __init__.py  base.py  collection.py  review.py  writing.py
agents/workflows/: __init__.py  builder.py  report_workflow.py
agents/workflows/templates/: __init__.py  loader.py
api/: __init__.py  dependencies.py
api/middlewares/: auth.py  rate_limit.py  request_log.py
api/routers/: admin.py  chat.py  health.py  index.py  session.py  task.py
api/schemas/: admin.py  request.py  response.py  session.py
config/: feature_flags.py  handler_chain.yaml  settings.py  workflow_templates.yaml
config/environments/: dev.yaml  prod.yaml
config/experiments/: __init__.py  default.yaml
docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
docker/grafana/dashboards/: provider.yml  research-agent.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: CitationList.tsx  DashboardCards.tsx  NodeCard.tsx  NodeProgress.tsx  OutputToolbar.tsx  ReportContent.tsx  SessionSelect.tsx  TaskForm.tsx  WorkflowTable.tsx
frontend/lib/: api.ts
frontend/stores/: reportStore.ts  sessionStore.ts  uiStore.ts  workflowStore.ts
frontend/types/: api.ts
harness/: __init__.py
harness/constraints/: __init__.py  role_constraints.yaml  workflow_rules.py
harness/eval/: __init__.py  comparator.py  experiment.py  reporter.py
harness/handlers/: __init__.py  audit_handler.py  base.py  fact_stage1_handler.py  fact_stage2_handler.py  hallucination_handler.py  input_safety_handler.py  permission_handler.py  structural_handler.py
harness/orchestrator/: __init__.py  context.py  main.py
harness/sensors/: __init__.py  eval_suite.py  token_monitor.py
infrastructure/cache/: __init__.py  redis_client.py
infrastructure/database/: __init__.py  checkpointer.py  connection.py  models.py
infrastructure/memory/: short_term.py  stats.py
infrastructure/message_queue/: __init__.py  dlq.py  task_queue.py
infrastructure/multi_tenant/: __init__.py  qdrant_tenant.py  rate_limiter.py  tenant_context.py
infrastructure/observability/: __init__.py  logger.py  metrics.py  tracer.py
infrastructure/vector_db/: __init__.py  qdrant_client.py
mcp_tools/: __init__.py  mcp_client.py  registry.py
mcp_tools/internal_tools/: __init__.py  file_manager.py  web_search.py
mcp_tools/mcp_servers/: __init__.py  chart_server.py  database_server.py  email_server.py  search_server.py
mcp_tools/search_backends/: __init__.py  base.py  mock_backend.py  tavily_backend.py
migrations/: env.py
migrations/versions/: 5bdaea782dac_initial.py
models/: __init__.py  router.py  semantic_cache.py
models/llm_providers/: __init__.py  deepseek_client.py  qwen_client.py  resolver.py
models/parsers/: __init__.py  json_parser.py  retry_parser.py
models/prompts/: __init__.py  prompt_manager.py
retrieval/: __init__.py
retrieval/chunkers/: paragraph_chunker.py
retrieval/embedders/: embedding_model.py
retrieval/loaders/: pdf_loader.py  url_loader.py
retrieval/pipelines/: build_index.py  index_worker.py
retrieval/retrievers/: hybrid_retriever.py
retrieval/vectorstores/: qdrant_store.py
scripts/: aggregate_daily_usage.py  bench_embedding.py  build_index.py  check_services.py  dev_start.ps1  init_db.py  rebuild_index.py  run_dev.ps1  save_report.py  start_dev.ps1  test_collector_live.py  test_tavily_extract.py  test_tavily_live.py  test_url_loader_live.py
services/: __init__.py  intent_service.py  report_service.py  user_context_service.py
services/validators/: __init__.py  content_validator.py  data_validator.py
tests/: check_redis.py  conftest.py
tests/chaos/: test_fault_injection.py
tests/contract/: test_api_contracts.py
tests/e2e/: conftest.py  test_api_flow.py
tests/eval/: conftest.py  test_factuality.py  test_hallucination.py
tests/integration/: __init__.py  test_admin_flags.py  test_deep_report_workflow.py  test_earnings_analysis_workflow.py  test_flash_news_workflow.py  test_pipelines.py  test_semantic_cache_integration.py  test_sse_disconnect.py  test_url_loader_live.py
tests/manual/: compare_writer_editor.py  demo_async_index.py  demo_data_analyst.py  demo_editor.py  demo_embedding_backend.py  demo_human_review.py  demo_paragraph_chunker.py  test_e2e.py  test_e2e_all.py  test_e2e_flash_news.py
tests/performance/: conftest.py  locustfile.py
tests/unit/: test_search_backends.py
(+78 files in other folders)
