[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_agent"
version = "0.1.0"
description = "智能研报生成系统 — Intelligent Research Report Generation System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Research Agent Team"}
]
keywords = ["research", "report", "agent", "langgraph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    # LangGraph
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # LLM
    "openai>=1.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Cache/Queue
    "redis>=5.0.0",
    "hiredis>=2.3.0",
    # Vector
    "qdrant-client>=1.9.0",
    # MCP
    "mcp>=1.0.0",
    # RAG
    "pypdf>=4.2.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "sentence-transformers>=3.0.0",
    # Governance
    # "fasttext>=0.9.3",  # Requires MSVC build tools on Windows; use pure Python regex fallback instead
    "spacy>=3.7.0",
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    # Retry
    "tenacity>=8.2.0",
    # Templates
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
