[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_agent"
version = "0.1.0"
description = "智能研报生成系统 — Intelligent Research Report Generation System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Research Agent Team"}
]
keywords = ["research", "report", "agent", "langgraph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    # LangGraph
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # LLM
    "openai>=1.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Cache/Queue
    "redis>=5.0.0",
    "hiredis>=2.3.0",
    # Vector
    "qdrant-client>=1.9.0",
    # MCP
    "mcp>=1.0.0",
    # Search
    "tavily-python>=0.5.0",
    # RAG
    "pypdf>=4.2.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "sentence-transformers>=3.0.0",
    "fastembed>=0.4.0",
    # Governance
    "jieba>=0.42.1",
    # "fasttext>=0.9.3",  # Requires MSVC build tools on Windows; use pure Python regex fallback instead
    "spacy>=3.7.0",
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    # Retry
    "tenacity>=8.2.0",
    # Templates
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "locust>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that require a local test HTTP server (CI-safe, no external network)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", ".git", "__pycache__", "migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "F401",  # unused import (module-level imports for side-effects like models)
]

[tool.ruff.lint.per-file-ignores]
# Test & demo files: sys.path manipulation requires imports after path setup
"tests/**/*.py" = ["E402", "F841", "F821"]
"models/__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
